# calculator-mcp-server

./: calculator_server.py  pyproject.toml  requirements.txt
