[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-mcp-server"
version = "1.0.0"
description = "A server for complex mathematical calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "sympy>=1.14.0",
    "pydantic>=2.11.7",
    "matplotlib>=3.10.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.setuptools]
py-modules = ["calculator_server"]