[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-mcp-server"
version = "1.0.0"
description = "A server for complex mathematical calculations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
    "numpy",
    "scipy",
    "sympy",
    "pydantic",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
calculator-mcp-server = "calculator_server:main"

[tool.setuptools]
py-modules = ["calculator_server"]
